# SYSTEM_DESIGN

./: 2. System_Design.odt  Dockerfile  docker-compose.yml  package.json
api/: Dockerfile  api.py
api/MODELS/: setup.cfg
api/MODELS/models/: model.py
api/MODELS/models.egg-info/: PKG-INFO  requires.txt
api/migrations/versions/: 3db8443ac1df_add_directory_column_to_thread_table.py  823064cc2ddc_deneme.py  caa6a2bc780a_add_deneme_column_to_thread_table.py
frontend/src/Pages/: ThreadPage.js
src/: App.js
src/Components/Form/: form.js
src/Components/Terminal/: terminal.js
src/Pages/: ThreadPage.js
thread/: Dockerfile  requirements.txt  thread.py
v1.0/thread/: thread.py
v2.0/: Dockerfile
v2.0/src/Components/Terminal/: terminal.css  terminal.js
v3.0/: docker-compose.yml
v3.0/backend/: thread.py
v3.0/frontend/: Dockerfile  package.json
v3.0/frontend/src/Components/Form/: form.js
v3.0/frontend/src/Pages/: ThreadPage.js
v4.0/: docker-compose.yml
v4.0/backend/: Dockerfile  api.py  requirements.txt  worker.py
v4.0/frontend/src/: App.js
v5.0/: docker-compose.yml
v5.0/api/: api.py
v5.0/frontend/src/Components/Form/: form.css
v5.0/worker/: requirements.txt  worker.py
v6.0/api/: api.py  requirements.txt
v6.0/frontend/src/Pages/: ThreadPage.js
v6.0/worker/: haticesenayiseviyoramaacilmiyor.txt  requirements.txt  worker.py
v7.0/api/: Dockerfile  api.py
v7.0/frontend/: package.json
v7.0/worker/: worker.py
worker/: Dockerfile  deneme.py  worker.py
worker/MODELS/: setup.cfg  setup.py
worker/MODELS/models.egg-info/: SOURCES.txt
(+2 files in other folders)
