[metadata]
name = models
version = 0.0.1
author = Hatice Adiguzel
author_email = adiguzell.hatice@gmail.com
description = For use models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haticeadiguzel/MODELS
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    Flask-SQLAlchemy
    Flask
    redis
